# rust-docsbox-mcp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
corpus/: manifest.toml
examples/: opencode-config.json
site/: inline.mjs  package-lock.json  package.json  svelte.config.js  uno.config.ts  vite.config.ts
site/src/: app.css  app.html
site/src/lib/: tools.ts
site/src/routes/: +layout.svelte  +page.svelte
src/: main.rs  server.rs  web.rs
src/corpus/: mod.rs
src/tools/: clippy.rs  crates_io.rs  docs.rs  mod.rs  playground.rs  run_locally.rs  rustc_explain.rs  rustfmt.rs  util.rs
src/web/: index.html  llms-full.txt  llms.txt  robots.txt  sitemap.xml
tests/: health.rs
