[package]
name = "rust-docsbox-mcp"
version = "0.1.0"
edition = "2021"
description = "Streamable-HTTP Model Context Protocol server with Rust documentation, clippy, rustfmt, crates.io and Rust Playground tooling for LLM coding agents."
license = "MIT"
repository = "https://github.com/afterrealism/rust-docsbox-mcp"
homepage = "https://rust-mcp.afterrealism.com"
readme = "README.md"
keywords = ["mcp", "rust", "llm", "docs", "clippy"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "rust-docsbox-mcp"
path = "src/main.rs"

[dependencies]
# MCP server SDK (streamable HTTP transport)
rmcp = { version = "0.8", features = [
    "server",
    "macros",
    "schemars",
    "transport-streamable-http-server",
] }

# HTTP layer
axum = { version = "0.8", default-features = false, features = ["http1", "tokio", "json", "matched-path"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "limit"] }

# Async runtime
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "process", "fs", "signal", "io-util"] }
futures = "0.3"

# Serde / schemas
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
toml = "0.8"

# Networking for crates.io / playground / docs.rs
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
url = "2"
urlencoding = "2"

# Storage / search
rusqlite = { version = "0.32", features = ["bundled"] }
zstd = "0.13"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Errors
anyhow = "1"
thiserror = "1"

# Misc
once_cell = "1"
regex = "1"
which = "7"
tempfile = "3"

[dev-dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "test-util"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
